[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/minigames/MGTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/minigame_scripts/mg_raining_explosives/MG_RainingExplosives.gd" type="Script" id=2]
[ext_resource path="res://monogram.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/minigames/mg_raining_explosives/maps/Any_RainingExplosivesMap1.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[node name="MG_RainingExplosives" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
game_time = 1000000000
win_condition = 1
has_timer = false
visible_name = "Raining Explosives"
visible_hp = true

[node name="Cam" parent="." index="0"]
position = Vector2( 480, -64 )
zoom = Vector2( 1.32, 1.32 )
script = null

[node name="Countdown" type="Control" parent="CanvasLayer" index="2"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CountdownLabel" type="Label" parent="CanvasLayer/Countdown" index="0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -119.0
margin_right = 84.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="CountdownTimer" type="Timer" parent="." index="2"]
process_mode = 0

[node name="Any_RainingExplosivesMap1" parent="." index="3" instance=ExtResource( 4 )]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
